Fix ingredient checkmark positioning
Previously, it caused uneven line breaks on smaller size screens

--- a/style.css
+++ b/style.css
@@ -100,15 +100,19 @@ p {
   color: rgb(143 63 4 / 86%);
 }
 
+.ingredients__item {
+  position: relative;
+  padding-left: 1.5em;
+}
+
 .ingredients__item::before {
   content: "";
   width: 25px;
   height: 25px;
   background: url(./assets/checkmark.png) no-repeat;
-  display: inline-block;
-  position: relative;
-  top: 4px;
-  right: 10px;
+  position: absolute;
+  left: 5px;
+  top: 5px;
 }
 
 .ingredients__item + .ingredients__item {
